Agregado animacion header

--- a/Destinos.html
+++ b/Destinos.html
@@ -15,7 +15,7 @@
         <header class="header">
             <div class="logo">
                 <p class="iniciales-logo">BT</p>
-                <h1>BELASTI TRAVEL</h1>
+                <h1>BELASTI TRAVEL</h1>}
             </div>
             <nav class="menu">
                 <a href="./index.html">Inicio</a>
