Correccion error titulo

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&display=swap" rel="stylesheet"/>
 		<link rel="stylesheet" href="./style.css" />
 		<link rel="shortcut icon" href="./IMG/Logo.png">
-		<link
+		<!-- <link
 		rel="stylesheet"
 		href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-	  />
+	  /> -->
 	</head>
 	<body>
 		<div class="contenedor">
 			<header class="header">
 				<div class="logo">
 					<p class="iniciales-logo">BT</p>
-					<h1 class="animate__animated animate__bounce">BELASTI TRAVEL</h1>
+					<h1>BELASTI TRAVEL</h1>
 				</div>
 				<nav class="menu">
 					<a href="#">Inicio</a>
